--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="appbenri_app_package_name">app package name</string>
+    <string name="appbenri_icon_image">icon image</string>
 
 </resources>
